add swagger to posts handlers
